--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <h1>로그인페이지</h1>
-</hr>
-<form>
+<hr/>
+<form action="/login" method="POST"> <!-- 로그인버튼을 누르면 /login이 발동 =>스프링은 IoC컨테이너에서 UserDetailsService로 등록된 타입을 찾아 
+										=> PrincipalDetailsService가 찾아지겠지 그럼 loadUserByUsername 함수 호출을 한다
+										=>그때 넘어온 파라미터 username을 가지고 온다-->
 	<input type="text" name="username" placeholder="Username"/> <br/>
 	<input type="password" name="password" placeholder="Password"/> <br/>
 	<button>로그인</button>
